<resources>
    <string name="app_name">Coffee Maker App</string>
    <string name="lblwelcome">Welcome</string>
    <string name="lblcoffee_lovers_guide">A Coffee Lovers Guide</string>
    <string name="btnmenu">Coffee Menu</string>
    <string name="btnquick_order">Quick Order</string>
    <string name="btnExit">Exit</string>
    <string name="lblCoffee_menu">Coffee Menu</string>
    <string name="lblLatte">Latte</string>
    <string name="lblCappuccino">Cappuccino</string>
    <string name="lblBlack_tea">Black Tea</string>
    <string name="lblIce_tea">Ice Tea</string>
    <string name="lblMarocchino">Marocchino</string>
    <string name="lblEspresso">Espresso</string>
    <string name="lblAmericano">Americano</string>
    <string name="lblFlat_white">Flat White</string>
    <string name="lblChocolate">Chocolate</string>
    <string name="btnOrder">Order</string>
    <string name="btnQuick_order">Quick Order</string>
    <string name="lblLattee">Latte</string>
    <string name="btnAddLatte">+</string>
    <string name="btnMinusLatte">-</string>
    <string name="lblQuantityLatte">10</string>
    <string name="lblTotalLatte">R100</string>
    <string name="marocchino">Marocchino</string>
    <string name="textview">TextView</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="americano">Americano</string>
    <string name="addAmericano">+</string>
    <string name="minusAmericano">-</string>
    <string name="orderAmericano">Order</string>
    <string name="displayMenu">TextView</string>
    <string name="black_tea">Black Tea</string>
    <string name="orderBlack">Order</string>
    <string name="addBlack">+</string>
    <string name="minusBlack">-</string>
    <string name="ice_tea">Ice Tea</string>
    <string name="addIce">+</string>
    <string name="minusIce">-</string>
    <string name="orderIce">Order</string>
    <string name="flat_white">Flat White</string>
    <string name="addFlat">+</string>
    <string name="minusFlat">-</string>
    <string name="orderFlat">Order</string>
    <string name="espresso">Espresso</string>
    <string name="addEspresso">+</string>
    <string name="minusEspresso">-</string>
    <string name="orderEspresso">Order</string>
    <string name="chocolate">Chocolate</string>
    <string name="addChocolate">+</string>
    <string name="minusChocolate">-</string>
    <string name="orderChocolate">Order</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="addCappu">+</string>
    <string name="minusCappu">-</string>
    <string name="orderCappu">Order</string>
    <string name="rad_americano">Americano</string>
    <string name="rad_black">Black Tea</string>
    <string name="rad_cappuccino">Cappuccino</string>
    <string name="rad_chocolate">Chocolate</string>
    <string name="rad_espresso">Espresso</string>
    <string name="rad_flat">Flat White</string>
    <string name="rad_ice">Ice Tea</string>
    <string name="rad_latte">Latte</string>
    <string name="rad_marocchino">Marocchino</string>
    <string name="btn_quick">quick order</string>
    <string name="display_order">Display order</string>
    <string name="orderLatte">Order</string>
    <string name="exitMenu">Exit</string>
</resources>
