<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.example.codetride.coffeemakerapp.Menu">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/secret"
        android:scaleType="fitStart"
        android:id="@+id/imgSecret"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lblMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="34sp"
        android:textColor="#996633"
        android:text="@string/lblCoffee_menu"
        android:layout_below="@+id/imgSecret"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/lblMenu"
        android:layout_centerHorizontal="true"
        android:src="@drawable/fire" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/fire"
        android:layout_below="@id/lblMenu"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/imgLogo1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        tools:ignore="RtlHardcoded"
        android:layout_alignTop="@+id/imgLogo4"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblAmericano"
        android:layout_below="@+id/imgLogo1"
        android:layout_marginLeft="36dp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imgLogo2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        tools:ignore="RtlHardcoded"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/imgLogo1"
        android:layout_alignStart="@+id/imgLogo1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblChocolate"
        android:layout_below="@+id/imgLogo2"
        android:layout_marginLeft="35dp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imgLogo3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        tools:ignore="RtlHardcoded"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/imgLogo2"
        android:layout_alignStart="@+id/imgLogo2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblLatte"
        android:layout_below="@+id/imgLogo3"
        android:layout_marginLeft="53dp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imgLogo4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo4"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblEspresso" />

    <ImageView
        android:id="@+id/imgLogo5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_alignTop="@+id/imgLogo8"
        android:layout_alignLeft="@+id/imgLogo4"
        android:layout_alignStart="@+id/imgLogo4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblMarocchino"
        android:layout_below="@+id/imgLogo5"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imgLogo6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/imgLogo5"
        android:layout_alignLeft="@+id/imgLogo5"
        android:layout_alignStart="@+id/imgLogo5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/imgLogo6"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblCappuccino" />

    <ImageView
        android:id="@+id/imgLogo7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_marginTop="17dp"
        android:layout_marginRight="50dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblIce_tea"
        android:layout_below="@+id/imgLogo7"
        android:layout_alignLeft="@+id/imgLogo7"
        android:layout_alignStart="@+id/imgLogo7" />

    <ImageView
        android:id="@+id/imgLogo8"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        android:layout_marginTop="43dp"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/imgLogo7"
        android:layout_alignLeft="@+id/imgLogo7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblFlat_white"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/imgLogo8"
        android:layout_alignLeft="@+id/textView4" />

    <ImageView
        android:id="@+id/imgLogo9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/logo"
        tools:ignore="RtlHardcoded"
        android:layout_alignTop="@+id/imgLogo6"
        android:layout_alignLeft="@+id/imgLogo8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:text="@string/lblBlack_tea"
        android:layout_below="@+id/imgLogo9"
        android:layout_alignLeft="@+id/textView7"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lblMenu"
        android:layout_alignLeft="@+id/lblMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/lblMenu"
        android:layout_alignStart="@+id/lblMenu"
        android:background="#996633"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:text="@string/btnOrder" />

</RelativeLayout>
