<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.example.codetride.coffeemakerapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/secret"
        android:scaleType="fitStart"
        android:id="@+id/imgSecret"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="42sp"
        android:text="@string/lblwelcome"
        android:textColor="#996633"
        android:layout_below="@+id/imgSecret"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/lblLovers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblWelcome"
        android:layout_centerHorizontal="true"
        android:text="@string/lblcoffee_lovers_guide"
        android:textColor="#996633"
        android:textSize="14sp"
        android:layout_marginBottom="25dp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/cup"
        android:scaleType="fitXY"
        android:layout_above="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp"
        android:layout_below="@+id/lblLovers" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnmenu"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnQuickOrder"
        android:layout_alignStart="@+id/btnQuickOrder"
        android:layout_alignRight="@+id/btnQuickOrder"
        android:background="#9941"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_alignEnd="@+id/btnQuickOrder" />

    <Button
        android:id="@+id/btnQuickOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:text="@string/btnquick_order"
        android:layout_below="@+id/btnMenu"
        android:layout_marginBottom="5dp"
        android:textAllCaps="false"
        android:background="#9941"

        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:textColor="#000"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/btnExit"
        android:background="#9941"
        android:layout_below="@+id/btnQuickOrder"
        android:layout_alignLeft="@+id/btnQuickOrder"
        android:layout_alignStart="@+id/btnQuickOrder"
        android:layout_alignRight="@+id/btnQuickOrder"
        android:layout_alignEnd="@+id/btnQuickOrder" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:srcCompat="@drawable/google_play"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>
