<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="com.example.codetride.coffeemakerapp.Black_tea">


    <ImageView
        android:id="@+id/imgSecret"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitStart"
        android:src="@drawable/secret" />

    <TextView
        android:id="@+id/lblQuickOrder"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/black_tea"
        android:textColor="#FF0000"
        android:textSize="42sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/lblLovers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblQuickOrder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/lblcoffee_lovers_guide"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblQuickOrder"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblQuantityBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingRight="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#996633"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginTop="17dp"
            android:layout_weight="1"
            android:src="@drawable/black_tea" />

        <TextView
            android:id="@+id/lblTotalBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#996633"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:background="#996633"
        android:text="@string/addBlack"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="32dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/btnAdd"
        android:layout_alignStart="@+id/btnAdd"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="10dp"
        android:background="#996633"
        android:text="@string/minusBlack"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />




    <TextView
        android:id="@+id/lblDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#996633"
        android:textStyle="bold"
        android:layout_below="@+id/btnMinus"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:text="@string/orderBlack"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/proMenu"
        style="?android:attr/progressBarStyle"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
